--- a/productos.html
+++ b/productos.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link href="https://fonts.googleapis.com/css2?family=Allura&amp;family=Inter:wght@200;300;400;600&amp;display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="../css/tablet.css" media="screen and (min-width: 768px)"/>
-    <link rel="stylesheet" href="../css/desktop.css" media="screen and (min-width: 1024px)"/>
-    <link rel="stylesheet" href="../css/menu.css"/>
-    <link rel="stylesheet" href="../css/form.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="/css/tablet.css" media="screen and (min-width: 768px)"/>
+    <link rel="stylesheet" href="/css/desktop.css" media="screen and (min-width: 1024px)"/>
+    <link rel="stylesheet" href="/css/menu.css"/>
+    <link rel="stylesheet" href="/css/form.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"> </script>
@@ -21,17 +21,17 @@
   <body>
     <header>
       <div class="menu-top"> 
-        <p>Bienvenido a SERTEC.</p><a class="menu-top__link" href="/html/privacidad.html">Aviso de Privacidad</a>
+        <p>Bienvenido a SERTEC.</p><a class="menu-top__link" href="/privacidad.html">Aviso de Privacidad</a>
       </div>
       <nav class="menu"> 
         <section class="menu__container"> <img class="menu__logo" src="/images/SVG/logoSertec.svg"/>
           <ul class="menu__links"> 
-            <li class="menu__item"> <a class="menu__link" href="/">INICIO</a></li>
-            <li class="menu__item"> <a class="menu__link" href="/html/empresa.html">¿QUÍENES SOMOS?</a></li>
-            <li class="menu__item"> <a class="menu__link" href="/html/servicios.html">SERVICIOS</a></li>
-            <li class="menu__item"> <a class="menu__link" href="/html/productos.html">PRODUCTOS</a></li>
-            <li class="menu__item"> <a class="menu__link" href="/html/calderas.html">CALDERAS</a></li>
-            <li class="menu__item"> <a class="menu__link" href="/html/contacto.html">CONTACTO</a></li>
+            <li class="menu__item"> <a class="menu__link" href="index.html">INICIO</a></li>
+            <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUÍENES SOMOS?</a></li>
+            <li class="menu__item"> <a class="menu__link" href="servicios.html">SERVICIOS</a></li>
+            <li class="menu__item"> <a class="menu__link" href="productos.html">PRODUCTOS</a></li>
+            <li class="menu__item"> <a class="menu__link" href="calderas.html">CALDERAS</a></li>
+            <li class="menu__item"> <a class="menu__link" href="contacto.html">CONTACTO</a></li>
           </ul>
           <div class="menu__hamburger"> <img class="menu__img" src="/images/Iconos/menu.svg" alt="icono de menu"/></div>
         </section>
@@ -107,7 +107,7 @@
                   </div>
                 </div>
                 <div class="accordion-body__box">
-                  <div class="accordion-body__box-img"><img class="accordion-body__box__img img-fluid" src="/images/Products//rolloDeLamina600x600.jpg" alt="Block aislante"/></div>
+                  <div class="accordion-body__box-img"><img class="accordion-body__box__img img-fluid" src="/images/Products/rolloDeLamina600x600.jpg" alt="Block aislante"/></div>
                   <div class="accordion-body__box-txt">
                     <p>Rollo de lámina</p>
                   </div>
@@ -527,7 +527,7 @@
           </div>
           <div class="footer__box__body-socialmedia">
             <div class="footer__box__body-socialmedia__icon">
-              <h2>SÍGUENOS</h2><a href="https://facebook.com"> <img src="/images/SVG/face.svg" alt="Ícono de facebook"/></a>
+              <h2>SÍGUENOS</h2><a href="https:/facebook.com"> <img src="/images/SVG/face.svg" alt="Ícono de facebook"/></a>
             </div>
           </div>
         </div>
