Se cambia una letra para probar el cambio entre ramas

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </picture>
             <div class="slide1__Content">
               <div class="slide1__Content__box">
-                <p class="slide1__Content__box-line1">30 añosx</p>
+                <p class="slide1__Content__box-line1">30 añosxx</p>
                 <p class="slide1__Content__box-line2"><strong>DE EXPERIENCIA <br/>NOS RESPALDAN</strong> </p><a class="slide1__Content__box-line3" href="/html/empresa.html">Conózcanos    </a>
               </div>
             </div>
