Quitando / de las rutas de las imagenes

--- a/servicios.html
+++ b/servicios.html
@@ -41,8 +41,8 @@
       <div class="section__header">
         <div class="section__header-content">
           <picture>
-            <source media="(min-width:1110px)" srcset="/images/JPG/bannerServicios1920x600.jpg"/>
-            <source media="(min-width:768px)" srcset="/images/JPG/bannerServicios834x537.jpg"/><img class="img-fluid" src="/images/JPG/bannerServicios428x374.jpg" alt="Ingeniero con casco"/>
+            <source media="(min-width:1110px)" srcset="images/JPG/bannerServicios1920x600.jpg"/>
+            <source media="(min-width:768px)" srcset="images/JPG/bannerServicios834x537.jpg"/><img class="img-fluid" src="images/JPG/bannerServicios428x374.jpg" alt="Ingeniero con casco"/>
           </picture>
           <p>SERVICIOS</p>
         </div>
@@ -51,27 +51,27 @@
       <div class="servicios__necesidades"> </div>
       <div class="servicios__periodico">
         <picture>
-          <source media="(min-width:768px)" srcset="/images/JPG/bannerservicios1920x500-.jpg"/>
-          <source media="(min-width:768px)" srcset="/images/JPG/bannerServicios834x537-.jpg"/><img class="img-fluid" src="/images/JPG/bannerservicios428x374-.jpg" alt="Ingeniero con casco"/>
+          <source media="(min-width:768px)" srcset="images/JPG/bannerservicios1920x500-.jpg"/>
+          <source media="(min-width:768px)" srcset="images/JPG/bannerServicios834x537-.jpg"/><img class="img-fluid" src="images/JPG/bannerservicios428x374-.jpg" alt="Ingeniero con casco"/>
         </picture>
         <p>Realizar un periódico y adecuado mantenimiento a sus equipos,<br/> <strong>ayudará a reducir costos de operación.</strong></p>
       </div>
       <p class="title2">CATÁLOGO DE SERVICIOS</p>
       <div class="servicios__catalogo"> 
         <div class="servicios__catalogo__items"> 
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="/images/serviciosMobile/disenoCuartoMaquinas500x458.jpg" alt=""/>
+          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/disenoCuartoMaquinas500x458.jpg" alt=""/>
             <p>DISEÑO DE CUARTO DE MÁQUINAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#maquinasModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true" id="maquinasModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="/images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
                     <p class="modal-title" id="exampleModalLabel">DISEÑO DE CUARTO DE MAQUINAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
                       <p>CUARTO DE MAQUINAS</p>
-                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="/images/Single/DisenoCuartodeMaquinas.jpg" alt=""/></div>
+                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/DisenoCuartodeMaquinas.jpg" alt=""/></div>
                     </div>
                     <div class="modal-content-body-content">
                       <p>Diseño y planeación del cuarto o sala de máquinas para el posterior establecimiento de calderas y calentadores con sus equipos auxiliares.</p>
@@ -84,19 +84,19 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="/images/serviciosMobile/instalacionCalderas500x458.jpg"/>
+          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/instalacionCalderas500x458.jpg"/>
             <p>INSTALACIÓN DE CALDERAS <br/>Y <br/>EQUIPOS AUXILIARES</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#hollinModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" id="hollinModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="/images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
                     <p class="modal-title" id="exampleModalLabel">INSTALACIÓN DE CALDERAS Y EQUIPOS AUXILIARES</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
                       <p>INSTALACIÓN DE COLECTOR DE HOLLÍN</p>
-                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="/images/Single/hollin.jpg" alt="Hollin"/><img class="img-fluid" src="/images/Single/instalacionCalderasEquiposAux.jpg" alt="Hollin"/></div>
+                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/hollin.jpg" alt="Hollin"/><img class="img-fluid" src="images/Single/instalacionCalderasEquiposAux.jpg" alt="Hollin"/></div>
                     </div>
                     <div class="modal-content-body-content">
                       <p>Desmontaje, colocación, instalación, arranque de calderas y calentadores así como de:</p>
@@ -123,21 +123,21 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="/images/serviciosMobile/MttoCalderas500x458.jpg" alt=""/>
+          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/MttoCalderas500x458.jpg" alt=""/>
             <p>MANTENIMIENTO PREVENTIVO <br/>Y <br/>CORRECTIVO A CALDERAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#mttoModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="mttoModalLabel" aria-hidden="true" id="mttoModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="/images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
                     <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO Y CORRECTIVO A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
                       <p>MANTENIMIENTO PREVENTIVO</p>
                       <div class="modal-content-body-sidebar__images">
-                        <h3>ANTES</h3><img class="img-fluid" src="/images/Single/mantenimientoPrevCorr1.jpg"/>
-                        <h3>DESPUÉS </h3><img class="img-fluid" src="/images/Single/mantenimientoPrevCorr2.jpg"/>
+                        <h3>ANTES</h3><img class="img-fluid" src="images/Single/mantenimientoPrevCorr1.jpg"/>
+                        <h3>DESPUÉS </h3><img class="img-fluid" src="images/Single/mantenimientoPrevCorr2.jpg"/>
                       </div>
                     </div>
                     <div class="modal-content-body-content">
@@ -194,21 +194,21 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="/images/serviciosMobile/conversionCalderas500x458.jpg"/>
+          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/conversionCalderas500x458.jpg"/>
             <p>CONVERSIÓN DE COMBUSTIBLES A CALDERAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#conversionModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="conversionModalLabel" aria-hidden="true" id="conversionModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="/images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
                     <p class="modal-title" id="exampleModalLabel">CONVERSIÓN DE COMBUSTIBLES A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
                       <p>CONVERSIÓN DE COMBUSTÓLEO A GAS NATURAL</p>
                       <div class="modal-content-body-sidebar__images">
-                        <h3>ANTES</h3><img class="img-fluid" src="/images/Single/conversionCombustibles1.jpg" alt="Caldera"/>
-                        <h3>DESPUÉS</h3><img class="img-fluid" src="/images/Single/conversionCombustibles2.jpg" alt="Caldera"/>
+                        <h3>ANTES</h3><img class="img-fluid" src="images/Single/conversionCombustibles1.jpg" alt="Caldera"/>
+                        <h3>DESPUÉS</h3><img class="img-fluid" src="images/Single/conversionCombustibles2.jpg" alt="Caldera"/>
                       </div>
                     </div>
                     <div class="modal-content-body-content">
@@ -236,21 +236,21 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="/images/serviciosMobile/quemadores500x458.jpg"/>
+          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/quemadores500x458.jpg"/>
             <p>MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO A QUEMADORES</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#quemadoresModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="quemadoresModalLabel" aria-hidden="true" id="quemadoresModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="/images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
                     <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO Y CORRECTIVO A QUEMADORES</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
                       <p>MANTENIMIENTO PREVENTIVO</p>
                       <div class="modal-content-body-sidebar__images">
-                        <h3>ANTES</h3><img class="img-fluid" src="/images/Single/quemadores1.jpg" alt=""/>
-                        <h3>DESPUÉS</h3><img class="img-fluid" src="/images/Single/quemadores2.jpg" alt=""/>
+                        <h3>ANTES</h3><img class="img-fluid" src="images/Single/quemadores1.jpg" alt=""/>
+                        <h3>DESPUÉS</h3><img class="img-fluid" src="images/Single/quemadores2.jpg" alt=""/>
                       </div>
                     </div>
                     <div class="modal-content-body-content">
@@ -269,19 +269,19 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="/images/serviciosMobile/carburacionesTesto500x458.jpg"/>
+          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/carburacionesTesto500x458.jpg"/>
             <p>CARBURACIONES CON EQUIPO ANALIZADOR TESTO</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#testoModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="testoModalLabel" aria-hidden="true" id="testoModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="/images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
                     <p class="modal-title" id="exampleModalLabel">CARBURACIONES CON EQUIPO ANALIZADOR TESTO</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
                       <p>CARBURACIÓN</p>
-                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="/images/Single/testo1.jpg"/><img class="img-fluid" src="/images/Single/testo2.jpg"/></div>
+                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/testo1.jpg"/><img class="img-fluid" src="images/Single/testo2.jpg"/></div>
                     </div>
                     <div class="modal-content-body-content">
                       <p>Carburación con equipo analizador de gases de combustión marca Testo para sistemas mecánicos y electrónicos.</p>
@@ -294,19 +294,19 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="/images/serviciosMobile/cursos500x458.jpg" alt=""/>
+          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/cursos500x458.jpg" alt=""/>
             <p>CURSO BÁSICO DE OPERACIÓN A CALDERAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#cursosModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="cursosModalLabel" aria-hidden="true" id="cursosModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="/images/SVG/circle-chevron-right-solid.svg" alt=""/>
+                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg" alt=""/>
                     <p class="modal-title" id="exampleModalLabel">CURSO BÁSICO DE OPERACIÓN A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
                       <p>CURSO DE CALDERAS</p>
-                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="/images/Single/curso.jpg"/></div>
+                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/curso.jpg"/></div>
                     </div>
                     <div class="modal-content-body-content">
                       <p>Cursos de evaluación, capacitación, actualización y asesoría para fogoneros con validez ante S.P.S. y que tienen como finalidad dar cumplimiento ante la Norma Oficial mexicana NOM-020-STPS-2002  así como a la conservación, cuidado y buen uso de las calderas instaladas en las empresas.</p>
@@ -319,19 +319,19 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="/images/serviciosMobile/serviciosAdicionales500x458.jpg"/>
+          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/serviciosAdicionales500x458.jpg"/>
             <p>SERVICIOS ADICIONALES</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#adicionalesModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="adicionalesModalLabel" aria-hidden="true" id="adicionalesModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
-                  <div class="modal-content-header"><img src="/images/SVG/circle-chevron-right-solid.svg"/>
+                  <div class="modal-content-header"><img src="images/SVG/circle-chevron-right-solid.svg"/>
                     <p class="modal-title" id="exampleModalLabel">SERVICIOS ADICIONALES</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
                       <p>EMERGENCIAS</p>
-                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="/images/Single/emergencias.jpg"/></div>
+                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/emergencias.jpg"/></div>
                     </div>
                     <div class="modal-content-body-content">
                       <ul> 
