--- a/empresa.html
+++ b/empresa.html
@@ -41,8 +41,8 @@
       <div class="section__header">
         <div class="section__header-content">
           <picture>
-            <source media="(min-width:1110px)" srcset="/images/JPG/bannerSomos1920x600.jpg"/>
-            <source media="(min-width:768px)" srcset="/images/JPG/bannerSomos834x537.jpg"/><img class="img-fluid" src="/images/JPG/bannerSomos428x374.jpg" alt="Ingeniero con casco"/>
+            <source media="(min-width:1110px)" srcset="images/JPG/bannerSomos1920x600.jpg"/>
+            <source media="(min-width:768px)" srcset="images/JPG/bannerSomos834x537.jpg"/><img class="img-fluid" src="images/JPG/bannerSomos428x374.jpg" alt="Ingeniero con casco"/>
           </picture>
           <p>¿QUIÉNES <br/> <strong>SOMOS?</strong></p>
         </div>
@@ -51,39 +51,39 @@
       <div class="empresa__content">
         <div class="empresa__content-historia">
           <picture>
-            <source media="(min-width:1110px)" srcset="/images/fondo-degradado-desktop.png"/>
-            <source media="(min-width:768px)" srcset="/images/fondo-degradado-tablet.png"/><img class="img-fluid" src="/images/fondo-degradado-mobile.png"/>
+            <source media="(min-width:1110px)" srcset="images/fondo-degradado-desktop.png"/>
+            <source media="(min-width:768px)" srcset="images/fondo-degradado-tablet.png"/><img class="img-fluid" src="images/fondo-degradado-mobile.png"/>
           </picture>
           <p>Somos una empresa 100% mexicana fundada en la ciudad de Aguascalientes con 30 años de experiencia en el manejo especializado de generadores de vapor. <br/><br/>Nos hemos caracterizado por brindar a nuestros clientes un servicio personalizado y eficiente gracias a la experiencia y profesionalismo de nuestro personal así como al respaldo de nuestros proveedores al surtirnos de refacciones de las mejores marcas en el mercado; nuestros servicios cuentan con el respaldo adecuado para garantizar a nuestros clientes el resolver sus necesidades, manteniéndolos operativos de una manera eficaz y segura, siempre con el objetivo de superar sus expectativas. <br/><br/> Nuestro compromiso en el servicio y la magnífica atención a nuestros clientes, nos sitúa como una de las empresas de mayor prestigio en el centro del país.</p>
         </div>
         <div class="empresa__content__mvv">
-          <div class="empresa__content__mvv-box shadow"><img src="/images/SVG/mision.svg"/>
+          <div class="empresa__content__mvv-box shadow"><img src="images/SVG/mision.svg"/>
             <h2>MISIÓN</h2>
             <p>Nuestro compromiso es satisfacer las necesidades y requerimientos de nuestros clientes con soluciones innovadoras e integrales, mediante el suministro de productos y servicios de alta calidad en ingeniería de calderas así como el ofrecer un mantenimiento industrial a precio competitivo con la finalidad de brindar soluciones específicas orientadas a maximizar la productividad dentro de sus procesos de manera óptima y eficaz.</p>
           </div>
-          <div class="empresa__content__mvv-box shadow"><img src="/images/SVG/vision.svg"/>
+          <div class="empresa__content__mvv-box shadow"><img src="images/SVG/vision.svg"/>
             <h2>VISIÓN</h2>
             <p>Ser una empresa de renombre global, consolidada por su alto nivel de calidad, eficiencia y servicio a través de la mejora continua y con enfoque a la excelencia, brindando siempre las mejores soluciones y productos a nuestros clientes, lo que nos permita posicionarnos como un proveedor líder de gran valor y con alta presencia en el mercado industrial.</p>
           </div>
-          <div class="empresa__content__mvv-box shadow"><img src="/images/SVG/valores.svg"/>
+          <div class="empresa__content__mvv-box shadow"><img src="images/SVG/valores.svg"/>
             <h2>VALORES</h2>
             <ul>
-              <li> <img src="/images/SVG/check.svg"/>
+              <li> <img src="images/SVG/check.svg"/>
                 <p>Calidad</p>
               </li>
-              <li> <img src="/images/SVG/check.svg"/>
+              <li> <img src="images/SVG/check.svg"/>
                 <p>Seguridad</p>
               </li>
-              <li> <img src="/images/SVG/check.svg"/>
+              <li> <img src="images/SVG/check.svg"/>
                 <p>Confianza</p>
               </li>
-              <li> <img src="/images/SVG/check.svg"/>
+              <li> <img src="images/SVG/check.svg"/>
                 <p>Honestidad</p>
               </li>
-              <li> <img src="/images/SVG/check.svg"/>
+              <li> <img src="images/SVG/check.svg"/>
                 <p>Compromiso</p>
               </li>
-              <li> <img src="/images/SVG/check.svg"/>
+              <li> <img src="images/SVG/check.svg"/>
                 <p>Responsabilidad</p>
               </li>
             </ul>
