--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <picture class="carousel-item__img">
-              <source media="(min-width:1110px)" srcset="/images/SlidesDesktop/indexDesktop1-1920x1035-.jpg"/>
-              <source media="(min-width:768px)" srcset="/images/slidesTablet/Slide1-834X565.jpg"/><img class="d-block w-100" src="/images/slidesMobile/slide2-480x565.jpg"/>
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/indexDesktop1-1920x1035-.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide1-834X565.jpg"/><img class="d-block w-100" src="images/slidesMobile/slide2-480x565.jpg"/>
             </picture>
           </div>
           <div class="carousel-item">
             <picture class="carousel-item__img">
-              <source media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
-              <source media="(min-width:768px)" srcset="/images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="/images/slidesMobile/slide1-480x565.jpg"/>
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
             </picture>
             <div class="slide1__Content">
               <div class="slide1__Content__box">
@@ -60,8 +60,8 @@
           </div>
           <div class="carousel-item">
             <picture class="carousel-item__img">
-              <source media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
-              <source media="(min-width:768px)" srcset="/images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="/images/slidesMobile/slide1-480x565.jpg"/>
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
             </picture>
             <div class="slide2__Content">
               <div class="slide2__Content__box">
@@ -73,8 +73,8 @@
           </div>
           <div class="carousel-item">
             <picture class="carousel-item__img">
-              <source media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
-              <source media="(min-width:768px)" srcset="/images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="/images/slidesMobile/slide1-480x565.jpg"/>
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
             </picture>
             <div class="slide3__Content">
               <div class="slide3__Content__box">
@@ -84,8 +84,8 @@
           </div>
           <div class="carousel-item">
             <picture class="carousel-item__img">
-              <source media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
-              <source media="(min-width:768px)" srcset="/images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="/images/slidesMobile/slide1-480x565.jpg"/>
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
             </picture>
             <div class="slide4__Content">
               <div class="slide4__Content__box">
@@ -101,7 +101,7 @@
     <div class="index__contactenos">
       <div class="index__contactenos__txt">
         <picture> 
-          <source media="(min-width:768px)" srcset="/images/PNG/fondoContactenos4.png"/><img src="/images/PNG/fondoContactenos.png"/>
+          <source media="(min-width:768px)" srcset="images/PNG/fondoContactenos4.png"/><img src="images/PNG/fondoContactenos.png"/>
         </picture>
         <p>¿Necesita asesoría especializada para su empresa?</p>
       </div>
@@ -112,13 +112,13 @@
       <div class="index__area__acerca">
         <div class="index__area__acerca__box">
           <div class="index__area__acerca__box-txt">
-            <p>En </p><img src="/images/SVG/logoBlanco.svg"/>
+            <p>En </p><img src="images/SVG/logoBlanco.svg"/>
             <p class="estamos">estamos comprometidos en brindar soluciones adecuadas a problemas de operación y de funcionalidad a <strong>calderas y equipos generadores de vapor</strong> en general, asegurando su correcta operación y máximo rendimiento, a través de un servicio especializado de <strong>reparación y mantenimiento</strong> a sus equipos; contando con un equipo humano profesional e innovador para garantizar su plena y absoluta satisfacción.</p>
           </div>
           <div class="index__area__acerca__box-video"></div>
           <div class="index__area__acerca__box-img">
             <picture> 
-              <source media="(min-width:768px)" srcset="/images/calderaIndex-tablet.jpg"/><img class="img-fluid" src="/images/calderaindex-mobile.jpg"/>
+              <source media="(min-width:768px)" srcset="images/calderaIndex-tablet.jpg"/><img class="img-fluid" src="images/calderaindex-mobile.jpg"/>
               <p>SOMOS <strong>EXPERTOS</strong> Y TENEMOS LA <strong>EXPERIENCIA</strong> EN CALDERAS</p>
             </picture>
           </div>
@@ -126,30 +126,30 @@
       </div>
       <div class="index__area__experiencia">
         <picture> 
-          <source media="(min-width:768px)" srcset="/images/experienciaFondo-tablet.jpg"/><img class="img-fluid" src="/images/experienciaFondo-mobile.jpg"/>
+          <source media="(min-width:768px)" srcset="images/experienciaFondo-tablet.jpg"/><img class="img-fluid" src="images/experienciaFondo-mobile.jpg"/>
         </picture>
         <div class="index__area__experiencia-txt"> 
           <p>La experiencia profesional de 30 años de servicio nos respaldan para ayudarle a seleccionar el <strong>equipo industrial</strong> más adecuado a sus necesidades, así como también para brindarle la solución más idónea a sus problemas de operación en <strong>calderas</strong>, lo cual nos permite sin lugar a dudas ofrecer servicios y productos de las más alta calidad a nuestros clientes como una opción seria y confiable.</p>
         </div>
-        <div class="index__area__experiencia-img"> <img class="img-fluid" src="/images/experiencia.jpg" alt="Ingeniero colocando una caldera"/></div>
+        <div class="index__area__experiencia-img"> <img class="img-fluid" src="images/experiencia.jpg" alt="Ingeniero colocando una caldera"/></div>
       </div>
       <div class="index__area__prioridad"> 
         <p class="index__area__prioridad__title">En <strong>SERVICIO TÉCNICO A CALDERAS</strong> nuestra prioridad es usted por lo que le ofrecemos:</p>
         <div class="index__area__prioridad__items">
           <div class="index__area__prioridad__items-item">
-            <div class="box-img"> <img src="/images/SVG/engrane.svg"/></div>
+            <div class="box-img"> <img src="images/SVG/engrane.svg"/></div>
             <div class="box-txt">
               <p>SERVICIOS</p>
             </div>
           </div>
           <div class="index__area__prioridad__items-item index__area__prioridad__items-item-m">
-            <div class="box-img"><img src="/images/SVG/manometro.svg"/></div>
+            <div class="box-img"><img src="images/SVG/manometro.svg"/></div>
             <div class="box-txt">
               <p>PRODUCTOS</p>
             </div>
           </div>
           <div class="index__area__prioridad__items-item">
-            <div class="box-img"> <img src="/images/SVG/caldera.svg"/></div>
+            <div class="box-img"> <img src="images/SVG/caldera.svg"/></div>
             <div class="box-txt">
               <p>CALDERAS</p>
             </div>
@@ -161,28 +161,28 @@
 <p class="title">MARCAS</p>
 <div class="carousel slide carousel__mobile" data-bs-ride="carousel" id="carouselExampleControls">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="/images/Marcas/ALLANSON.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/ASCO.png"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/BELL &amp; GOSSET.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/CLEAVERBROOKS.png"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/ECOFLAM.png"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/GRUNDFOS.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/HONEYWELL.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/METRON.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/PICSA.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/SENTINEL.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/VAYREMEX.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/VIKING PUMP.jpg"/></div>
+    <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.png"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/BELL &amp; GOSSET.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.png"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.png"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/HONEYWELL.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/METRON.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/PICSA.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/SENTINEL.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/VAYREMEX.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/VIKING PUMP.jpg"/></div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
 </div>
 <div class="carousel slide carousel__tablet" data-bs-ride="carousel" id="carouselExampleControls">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="/images/Marcas/ALLANSON.jpg"/><img class="d-block w-100 img-fluid" src="/images/Marcas/ASCO.png"/><img class="d-block w-100 img-fluid" src="/images/Marcas/BELL &amp; GOSSET.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/CLEAVERBROOKS.png"/><img class="d-block w-100 img-fluid" src="/images/Marcas/ECOFLAM.png"/><img class="d-block w-100 img-fluid" src="/images/Marcas/GRUNDFOS.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/HONEYWELL.jpg"/><img class="d-block w-100 img-fluid" src="/images/Marcas/METRON.jpg"/><img class="d-block w-100 img-fluid" src="/images/Marcas/PICSA.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="/images/Marcas/SENTINEL.jpg"/><img class="d-block w-100 img-fluid" src="/images/Marcas/VAYREMEX.jpg"/><img class="d-block w-100 img-fluid" src="/images/Marcas/VIKING PUMP.jpg"/></div>
+    <div class="carousel-item active"><img class="d-block w-100 img-fluid" src="images/Marcas/ALLANSON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/ASCO.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/BELL &amp; GOSSET.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/CLEAVERBROOKS.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/ECOFLAM.png"/><img class="d-block w-100 img-fluid" src="images/Marcas/GRUNDFOS.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/HONEYWELL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/METRON.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/PICSA.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100 img-fluid" src="images/Marcas/SENTINEL.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VAYREMEX.jpg"/><img class="d-block w-100 img-fluid" src="images/Marcas/VIKING PUMP.jpg"/></div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
@@ -194,22 +194,22 @@
       <p class="title">¿POR QUÉ ELEGIRNOS?</p>
       <div class="index__area__elegirnos">
         <picture> 
-          <source media="(min-width:768px)" srcset="/images/fondo-degradado-tablet.png"/><img class="img-fluid" src="/images/fondo-degradado-mobile.png"/>
+          <source media="(min-width:768px)" srcset="images/fondo-degradado-tablet.png"/><img class="img-fluid" src="images/fondo-degradado-mobile.png"/>
         </picture>
         <div class="index__area__elegirnos__items">
-          <div class="index__area__elegirnos__items-item"><img src="/images/SVG/circle-chevron-right-solid__white.svg"/>
+          <div class="index__area__elegirnos__items-item"><img src="images/SVG/circle-chevron-right-solid__white.svg"/>
             <p>Nuestro compromiso es servirles como ustedes se merecen, proveyendo de todo lo indispensable para sus calderas, mejorando el desempeño y la confiabilidad de las mismas en un tiempo mínimo de respuesta, con la máxima rapidez y la mayor eficiencia.</p>
           </div>
-          <div class="index__area__elegirnos__items-item"><img src="/images/SVG/circle-chevron-right-solid__white.svg"/>
+          <div class="index__area__elegirnos__items-item"><img src="images/SVG/circle-chevron-right-solid__white.svg"/>
             <p>Brindamos un servicio especializado, personalizado y 100% garantizado para mantener sus equipos en óptimas condiciones de acuerdo a las necesidades y objetivos de cada empresa.</p>
           </div>
-          <div class="index__area__elegirnos__items-item"><img src="/images/SVG/circle-chevron-right-solid__white.svg"/>
+          <div class="index__area__elegirnos__items-item"><img src="images/SVG/circle-chevron-right-solid__white.svg"/>
             <p>Gracias al respaldo de los proveedores de las marcas más reconocidas, contamos con un amplio stock de partes de reemplazo, refacciones y equipos complementarios para sus calderas y así ofrecerles un excelente servicio.</p>
           </div>
-          <div class="index__area__elegirnos__items-item"><img src="/images/SVG/circle-chevron-right-solid__white.svg"/>
+          <div class="index__area__elegirnos__items-item"><img src="images/SVG/circle-chevron-right-solid__white.svg"/>
             <p>Ofrecemos el mejor servicio de carburación en base al cumplimiento de las normas oficiales.</p>
           </div>
-          <div class="index__area__elegirnos__items-item"><img src="/images/SVG/circle-chevron-right-solid__white.svg"/>
+          <div class="index__area__elegirnos__items-item"><img src="images/SVG/circle-chevron-right-solid__white.svg"/>
             <p>Nuestro personal está altamente calificado, cuenta con la experiencia y el profesionalismo para resolver sus necesidades y superar sus expectativas.</p>
           </div>
         </div>
