--- a/calderas.html
+++ b/calderas.html
@@ -141,6 +141,6 @@
         </div>
       </div>
     </footer>
-    <script src="/js/app-dist.js"></script>
+    <script src="js/app-dist.js"></script>
   </body>
 </html>
