--- a/empresa.html
+++ b/empresa.html
@@ -160,6 +160,6 @@
         </div>
       </div>
     </footer>
-    <script src="/js/app-dist.js"></script>
+    <script src="js/app-dist.js"></script>
   </body>
 </html>
