--- a/index.html
+++ b/index.html
@@ -284,6 +284,6 @@
         </div>
       </div>
     </footer>
-    <script src="/js/app-dist.js"></script>
+    <script src="js/app-dist.js"></script>
   </body>
 </html>
