--- a/productos.html
+++ b/productos.html
@@ -538,6 +538,6 @@
         </div>
       </div>
     </footer>
-    <script src="/js/app-dist.js"></script>
+    <script src="js/app-dist.js"></script>
   </body>
 </html>
