Ultimos cambios antes de fusionar con main

--- a/calderas.html
+++ b/calderas.html
@@ -21,10 +21,10 @@
   <body>
     <header>
       <div class="menu-top"> 
-        <p>Bienvenido a SERTEC.</p><a class="menu-top__link" href="//privacidad.html">Aviso de Privacidad</a>
+        <p>Bienvenido a SERTEC.</p><a class="menu-top__link" href="/privacidad.html">Aviso de Privacidad</a>
       </div>
       <nav class="menu"> 
-        <section class="menu__container"> <img class="menu__logo" src="//images/SVG/logoSertec.svg"/>
+        <section class="menu__container"> <img class="menu__logo" src="/images/SVG/logoSertec.svg"/>
           <ul class="menu__links"> 
             <li class="menu__item"> <a class="menu__link" href="index.html">INICIO</a></li>
             <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUÍENES SOMOS?</a></li>
@@ -33,7 +33,7 @@
             <li class="menu__item"> <a class="menu__link" href="calderas.html">CALDERAS</a></li>
             <li class="menu__item"> <a class="menu__link" href="contacto.html">CONTACTO</a></li>
           </ul>
-          <div class="menu__hamburger"> <img class="menu__img" src="../images/Iconos/menu.svg" alt="icono de menu"/></div>
+          <div class="menu__hamburger"> <img class="menu__img" src="/images/Iconos/menu.svg" alt="icono de menu"/></div>
         </section>
       </nav>
     </header>
@@ -74,25 +74,25 @@
     </div>
     <footer>
       <div class="footer__servirle"> 
-        <p class="line1">En </p><img src="//images/SVG/logoSertec.svg" alt="Logo de Sertec"/>
+        <p class="line1">En </p><img src="/images/SVG/logoSertec.svg" alt="Logo de Sertec"/>
         <p class="line2">estamos para servirle, contáctenos.</p>
       </div>
       <div class="footer__header">
         <div class="footer__header__box">
           <div class="footer__header__box__phone">
-            <div class="footer__header-icon"><img src="//images/Iconos/phone.svg" alt="icono de teléfono fijo"/></div>
+            <div class="footer__header-icon"><img src="/images/Iconos/phone.svg" alt="icono de teléfono fijo"/></div>
             <div class="footer__header__phone-num"> 
               <p>449 975-02-43 <br/>449 973-85-21</p>
             </div>
           </div>
           <div class="footer__header__box__cellphone">
-            <div class="footer__header-icon"> <img src="//images/Iconos/smartphone.svg" alt="ícono de un celular"/></div>
+            <div class="footer__header-icon"> <img src="/images/Iconos/smartphone.svg" alt="ícono de un celular"/></div>
             <div class="footer__header__cellphone-num"> 
               <p>449 143-59-39</p>
             </div>
           </div>
           <div class="footer__header__box__email"> 
-            <div class="footer__header-icon"><img src="//images/Iconos/email.svg" alt="ícono de un email"/></div>
+            <div class="footer__header-icon"><img src="/images/Iconos/email.svg" alt="ícono de un email"/></div>
             <div class="footer__header__email-txt"> 
               <p>sertec_ags@serteccalderas.com.mx</p>
             </div>
@@ -101,7 +101,7 @@
       </div>
       <div class="footer__box">
         <div class="footer__box__body">
-          <div class="footer__box__body-logo"><img src="//images/SVG/logoSertec.svg" alt="logotipo de SERTEC CALDERAS"/></div>
+          <div class="footer__box__body-logo"><img src="/images/SVG/logoSertec.svg" alt="logotipo de SERTEC CALDERAS"/></div>
           <div class="footer__box__body-links">
             <h2>Enlaces Directos</h2>
             <ul> 
@@ -114,7 +114,7 @@
               <li><a href="/html/privacidad.html">POLÍTICA DE PRIVACIDAD </a></li>
             </ul>
           </div>
-          <div class="footer__box__body-address"> <img src="//images/SVG/address.svg" alt="ícono de ubicación"/>
+          <div class="footer__box__body-address"> <img src="/images/SVG/address.svg" alt="ícono de ubicación"/>
             <p>Circuito Lacustre No. 309, Fracc. Villas del Cóbano C.P. 20150 Aguascalientes, Ags</p>
           </div>
           <div class="footer__box__body-schedule">
@@ -130,7 +130,7 @@
           </div>
           <div class="footer__box__body-socialmedia">
             <div class="footer__box__body-socialmedia__icon">
-              <h2>SÍGUENOS</h2><a href="https://facebook.com"> <img src="//images/SVG/face.svg" alt="Ícono de facebook"/></a>
+              <h2>SÍGUENOS</h2><a href="https:/facebook.com"> <img src="/images/SVG/face.svg" alt="Ícono de facebook"/></a>
             </div>
           </div>
         </div>
