--- a/calderas.html
+++ b/calderas.html
@@ -113,7 +113,8 @@
               <li><a href="/html/privacidad.html">POLÍTICA DE PRIVACIDAD </a></li>
             </ul>
           </div>
-          <div class="footer__box__body-address"> <img src="images/SVG/address.svg" alt="ícono de ubicación"/>
+          <div class="footer__box__body-address"> 
+            <h2>DIRECCIÓN</h2><img src="images/SVG/address.svg" alt="ícono de ubicación"/>
             <p>Circuito Lacustre No. 309, Fracc. Villas del Cóbano C.P. 20150 Aguascalientes, Ags</p>
           </div>
           <div class="footer__box__body-schedule">
