Cambios previos realizados

--- a/calderas.html
+++ b/calderas.html
@@ -44,7 +44,7 @@
             <source media="(min-width:1110px)" srcset="images/JPG/bannerCalderas1920x600.jpg"/>
             <source media="(min-width:768px)" srcset="images/JPG/bannerCalderas834x537.jpg"/><img class="img-fluid" src="images/JPG/bannerCalderas428x374.jpg" alt="Ingeniero con casco"/>
           </picture>
-          <p>CALDERAS</p>
+          <p class="banner-title">CALDERAS</p>
         </div>
       </div>
       <p class="title">VENTA DE CALDERAS</p>
