--- a/contacto.html
+++ b/contacto.html
@@ -44,7 +44,7 @@
             <source media="(min-width:1110px)" srcset="images/JPG/bannerContacto1920x600.jpg"/>
             <source media="(min-width:768px)" srcset="images/JPG/bannerContacto834x537.jpg"/><img class="img-fluid" src="images/JPG/bannerContacto428x374.jpg" alt="Ingeniero con casco"/>
           </picture>
-          <p>CONTACTO</p>
+          <p class="banner-title">CONTACTO</p>
         </div>
       </div>
       <p class="title">COMUNÍQUESE CON NOSOTROS</p>
