--- a/productos.html
+++ b/productos.html
@@ -44,7 +44,7 @@
             <source media="(min-width:1110px)" srcset="images/JPG/bannerProductos1920x600.jpg"/>
             <source media="(min-width:768px)" srcset="images/JPG/bannerProductos834x537.jpg"/><img class="img-fluid" src="images/JPG/bannerProductos428x374.jpg" alt="Manómetros"/>
           </picture>
-          <p>PRODUCTOS</p>
+          <p class="banner-title">PRODUCTOS</p>
         </div>
       </div>
       <p class="title">NUESTROS PRODUCTOS</p>
