--- a/servicios.html
+++ b/servicios.html
@@ -44,7 +44,7 @@
             <source media="(min-width:1110px)" srcset="images/JPG/bannerServicios1920x600.jpg"/>
             <source media="(min-width:768px)" srcset="images/JPG/bannerServicios834x537.jpg"/><img class="img-fluid" src="images/JPG/bannerServicios428x374.jpg" alt="Ingeniero con casco"/>
           </picture>
-          <p>SERVICIOS</p>
+          <p class="banner-title">SERVICIOS</p>
         </div>
       </div>
       <p class="title">NUESTROS SERVICIOS</p>
@@ -59,7 +59,7 @@
       <p class="title2">CATÁLOGO DE SERVICIOS</p>
       <div class="servicios__catalogo"> 
         <div class="servicios__catalogo__items"> 
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/disenoCuartoMaquinas500x458.jpg" alt=""/>
+          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/disenoCuartoMaquinas500x458.jpg" alt=""/>
             <p>DISEÑO DE CUARTO DE MÁQUINAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#maquinasModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true" id="maquinasModal">
@@ -84,7 +84,7 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/instalacionCalderas500x458.jpg"/>
+          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/instalacionCalderas500x458.jpg"/>
             <p>INSTALACIÓN DE CALDERAS <br/>Y <br/>EQUIPOS AUXILIARES</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#hollinModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" id="hollinModal">
@@ -102,16 +102,16 @@
                       <p>Desmontaje, colocación, instalación, arranque de calderas y calentadores así como de:</p>
                       <ul> 
                         <li> 
-                          <p>Equipos auxiliares y equipos sujetos a presión.</p>
+                          <p>- Equipos auxiliares y equipos sujetos a presión.</p>
                         </li>
                         <li> 
-                          <p>Líneas y tuberías de vapor, agua y combustible.</p>
+                          <p>- Líneas y tuberías de vapor, agua y combustible.</p>
                         </li>
                         <li> 
-                          <p>Tanques de combustible, condensados y agua caliente.</p>
+                          <p>- Tanques de combustible, condensados y agua caliente.</p>
                         </li>
                         <li> 
-                          <p>Chimeneas y suavizadores.</p>
+                          <p>- Chimeneas y suavizadores.</p>
                         </li>
                       </ul>
                     </div>
@@ -123,7 +123,7 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/MttoCalderas500x458.jpg" alt=""/>
+          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/MttoCalderas500x458.jpg" alt=""/>
             <p>MANTENIMIENTO PREVENTIVO <br/>Y <br/>CORRECTIVO A CALDERAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#mttoModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="mttoModalLabel" aria-hidden="true" id="mttoModal">
@@ -144,42 +144,42 @@
                       <p>Mantenimiento preventivo, correctivo, reparaciones y atención de fallas a calderas:</p>
                       <ul> 
                         <li> 
-                          <p>Lavados y deshollinados.</p>
+                          <p>- Lavados y deshollinados.</p>
                         </li>
                         <li> 
-                          <p>Limpieza y calibración de controles de presión.</p>
+                          <p>- Limpieza y calibración de controles de presión.</p>
                         </li>
                         <li> 
-                          <p>Revisión de los sistemas de seguridad.</p>
+                          <p>- Revisión de los sistemas de seguridad.</p>
                         </li>
                         <li> 
-                          <p>Pruebas y ajustes de combustión.</p>
+                          <p>- Pruebas y ajustes de combustión.</p>
                         </li>
                         <li> 
-                          <p>Pruebas hidrostáticas.</p>
+                          <p>- Pruebas hidrostáticas.</p>
                         </li>
                         <li> 
-                          <p>Cambio y reparación de:</p>
+                          <p>- Cambio y reparación de:</p>
                           <ul>
-                            <li> 
+                            <li class="vineta"> 
                               <p>Amplificadores de flama (infrarrojos y ultravioleta), programadores. </p>
                             </li>
-                            <li> 
+                            <li class="vineta"> 
                               <p>Bombas y válvulas.</p>
                             </li>
-                            <li> 
+                            <li class="vineta"> 
                               <p>Espejos, hogar, cañones lisos y corrugados, tanques, suavizadores y serpentines.</p>
                             </li>
-                            <li> 
+                            <li class="vineta"> 
                               <p>Instalaciones, sistema eléctrico y de control.</p>
                             </li>
-                            <li> 
+                            <li class="vineta"> 
                               <p>Refractarios.</p>
                             </li>
-                            <li> 
+                            <li class="vineta"> 
                               <p>Tapas refractarias completas delanteras, intermedias y  traseras.</p>
                             </li>
-                            <li> 
+                            <li class="vineta"> 
                               <p>Tubería flux.</p>
                             </li>
                           </ul>
@@ -194,7 +194,7 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/conversionCalderas500x458.jpg"/>
+          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/conversionCalderas500x458.jpg"/>
             <p>CONVERSIÓN DE COMBUSTIBLES A CALDERAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#conversionModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="conversionModalLabel" aria-hidden="true" id="conversionModal">
@@ -215,16 +215,16 @@
                       <p>Conversión de combustibles a calderas:</p>
                       <ul> 
                         <li> 
-                          <p>De gas a combustóleo.</p>
+                          <p>- De gas a combustóleo.</p>
                         </li>
                         <li> 
-                          <p>De combustóleo a gas.</p>
+                          <p>- De combustóleo a gas.</p>
                         </li>
                         <li> 
-                          <p>De combustóleo a diésel.</p>
+                          <p>- De combustóleo a diésel.</p>
                         </li>
                         <li> 
-                          <p>De diésel a gas.</p>
+                          <p>- De diésel a gas.</p>
                         </li>
                       </ul>
                     </div>
@@ -236,7 +236,7 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/quemadores500x458.jpg"/>
+          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/quemadores500x458.jpg"/>
             <p>MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO A QUEMADORES</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#quemadoresModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="quemadoresModalLabel" aria-hidden="true" id="quemadoresModal">
@@ -257,7 +257,7 @@
                       <p>Mantenimiento preventivo, correctivo, reparaciones y atención de fallas a quemadores:</p>
                       <ul> 
                         <li> 
-                          <p>Revisión, limpieza, ajuste y calibración de quemadores para hornos y calderas conforme a análisis de emisión de gases.</p>
+                          <p>- Revisión, limpieza, ajuste y calibración de quemadores para hornos y calderas conforme a análisis de emisión de gases.</p>
                         </li>
                       </ul>
                     </div>
@@ -269,7 +269,7 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/carburacionesTesto500x458.jpg"/>
+          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/carburacionesTesto500x458.jpg"/>
             <p>CARBURACIONES CON EQUIPO ANALIZADOR TESTO</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#testoModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="testoModalLabel" aria-hidden="true" id="testoModal">
@@ -294,7 +294,7 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/cursos500x458.jpg" alt=""/>
+          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/cursos500x458.jpg" alt=""/>
             <p>CURSO BÁSICO DE OPERACIÓN A CALDERAS</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#cursosModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="cursosModalLabel" aria-hidden="true" id="cursosModal">
@@ -319,7 +319,7 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item shadow"><img class="img-fluid" src="images/serviciosMobile/serviciosAdicionales500x458.jpg"/>
+          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/serviciosAdicionales500x458.jpg"/>
             <p>SERVICIOS ADICIONALES</p>
             <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#adicionalesModal">Más Información</button>
             <div class="modal fade" tabindex="-1" aria-labelledby="adicionalesModalLabel" aria-hidden="true" id="adicionalesModal">
@@ -336,16 +336,16 @@
                     <div class="modal-content-body-content">
                       <ul> 
                         <li> 
-                          <p>Soporte y asesoría técnica especializada.</p>
+                          <p>- Soporte y asesoría técnica especializada.</p>
                         </li>
                         <li> 
-                          <p>Consultoría. </p>
+                          <p>- Consultoría. </p>
                         </li>
                         <li> 
-                          <p>Diagnóstico de equipos e instalaciones.</p>
+                          <p>- Diagnóstico de equipos e instalaciones.</p>
                         </li>
                         <li> 
-                          <p>Emergencias.</p>
+                          <p>- Emergencias.</p>
                         </li>
                       </ul>
                     </div>
