--- a/contacto.html
+++ b/contacto.html
@@ -69,6 +69,13 @@
           </form>
         </div>
       </div>
+      <div class="contacto__convencer">
+        <picture>
+          <source media="(min-width:1110px)" srcset="images/JPG/bannerContacto1920x600.jpg"/>
+          <source media="(min-width:768px)" srcset="images/JPG/bannerContacto834x537.jpg"/><img class="img-fluid" src="images/PNG/fondoContactenos2.png" alt="Ingeniero con casco"/>
+        </picture>
+        <p>Contáctenos y déjese convencer por nuestra amplia experiencia.</p>
+      </div>
     </div>
     <footer>
       <div class="footer__servirle"> 
