Se corrigió el problema del parrafo comentado en servicios, se hizo más chica la letra en 'realizar un periódico' y se hizo un salto de línea en el footer parrafo de dirección

--- a/productos.html
+++ b/productos.html
@@ -512,7 +512,7 @@
           </div>
           <div class="footer__box__body-address"> 
             <h2>DIRECCIÓN</h2><img src="images/SVG/address.svg" alt="ícono de ubicación"/>
-            <p>Circuito Lacustre No. 309, Fracc. Villas del Cóbano C.P. 20150 Aguascalientes, Ags.</p>
+            <p>Circuito Lacustre No. 309, Fracc. Villas del Cóbano <br/>C.P. 20150<br/> Aguascalientes, Ags.</p>
           </div>
           <div class="footer__box__body-schedule">
             <h2>HORARIOS DE ATENCIÓN</h2>
