--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </ul>
           <div class="menu__hamburger"> <img class="menu__img" src="images/Iconos/menu.svg" alt="icono de menu"/></div>
         </section>
-      </nav><span class="ir-arriba"><img src="/images/Iconos/circle-up.svg" alt=""/></span>
+      </nav><span class="ir-arriba"><img src="images/Iconos/circle-up.svg" alt=""/></span>
     </header>
     <div class="index">
       <section class="content__slides carousel slide carousel-fade" data-bs-ride="carousel" id="carouselExampleFade">
